[package]
name = "vodka"
version = "0.1.0"
authors = ["Mark Delk <jethrodaniel@gmail.com>"]
edition = "2018"
description = 'Does nothing (for now). Just dips on this name'
readme = 'README.md'
license = 'MIT'

[dependencies]

# To use the X11 system
#
# https://github.com/erlepereira/x11-rs/issues/94
x11 = { version = "2.18.1", features = ["xlib"] }

# Command line argument parser for Rust
clap = "2.33.0"

# For testing cli apps
assert_cmd = "0.11"
