[package]
name = "vodka"
version = "0.1.0"
authors = ["Mark Delk <jethrodaniel@gmail.com>"]
edition = "2018"
description = 'Does nothing (for now). Just dips on this name'
readme = 'README.md'
license = 'MIT'

[dependencies]

# logging
log = "0.4.6"
simplelog = "0.6.0"

# gtk graphics library
gio = "0.7.0"
gdk = "0.11.0"
gtk = "0.7.0"
pango = "0.7.0"
cairo-rs = { version = "0.7.0", features = ["png"] }

# x11 access
x11 = { version = "2.18.1", features = ["xlib"] }

# command line argument parser for Rust
clap = "2.33.0"

# test cli apps
assert_cmd = "0.11"
